<resources>

    <string name="app_name">智慧党建</string>
    <string name="str_homepage">首页</string>
    <string name="str_public">公共管理</string>
    <string name="str_party">党务管理</string>
    <string name="str_member">党员中心</string>
    <string name="str_home_member">党员之家</string>
    <string name="str_home_youth">青年之家</string>
    <string name="str_home_volunteer">志愿者之家</string>
    <string name="str_home_health">健康之家</string>
    <string name="str_home_employee">职工之家</string>
    <string name="str_home_study">在线学习</string>
    <string name="str_setting">设置</string>
    <string name="str_search">搜索</string>
    <string name="str_hometext">三门峡市医药总公司智慧党建以“务实、高效、便捷”为原则，开启智慧党建的新模式，独立开发“e药家智慧党建平台”。</string>
    <string name="title">三门峡市医药总公司智慧党建</string>
    <string name="homepage_notice">三门峡市医药总公司智慧党建公告</string>
    <string name="search_hint">请输入查找内容</string>
    <string name="search_label_1">申请书</string>
    <string name="search_label_2">候选人</string>
    <string name="search_label_3">组织审批</string>
    <string name="search_label_4">组织生活会</string>
    <string name="search_label_5">民主生活会</string>
    <string name="search_label_6">党支部</string>
    <string name="search_label_7">推优党员</string>
    <string name="search_label_8">新党员</string>
    <string name="search_datalist_title">搜索结果</string>
    <string name="notice_datalist_title">公告</string>
    <string name="login">登录</string>
    <string name="login_account">请输入账号</string>
    <string name="login_password">请输入密码</string>
    <string name="auto_login">自动登录</string>
    <string name="register">注册</string>
    <string name="member_party_branch">网上党支部</string>
    <string name="member_partydues">党费查询</string>
    <string name="member_party_transform_n">组织\n关系转接</string>
    <string name="member_party_transform">组织关系转接</string>
    <string name="member_discussion">内部论坛</string>
    <string name="member_rules">规章制度</string>
    <string name="member_party_respond">党员责任区</string>
    <string name="transform_into">转入组织选择</string>
    <string name="transform">关系转接</string>
    <string name="transform_confirm">确认转接</string>
    <string name="transform_cancel">取消</string>
    <string name="transform_branch_confirm">确认</string>
    <string name="transform_name">姓名：</string>
    <string name="transform_party_name">党组织名称：</string>
    <string name="transform_party_address">党组织所在地：</string>
    <string name="transform_time">转入本组织时间：</string>
    <string name="transform_from_party_name">转出党组织名称：</string>
    <string name="transform_from_party_address">转出党组织所在地：</string>
    <string name="transform_into_party_name">转入党组织名称：</string>
    <string name="transform_into_party_address">转入党组织所在地：</string>
    <string name="next_page">下一页</string>
    <string name="last_page">上一页</string>
    <string name="return_to_change">返回修改</string>
    <string name="party_dues_hand">已交</string>
    <string name="party_dues_search_type">查询类型：身份证</string>
    <string name="id_number">证件号码：</string>
    <string name="please_id_number">请输入证件号码</string>
    <string name="search">查询</string>
    <string name="search_result">查询结果</string>
    <string name="str_pay">缴费</string>
    <string name="str_inter_party_online">在线入党</string>
    <string name="str_organization_life">组织生活</string>
    <string name="str_member_manage">党员管理</string>
    <string name="str_member_education">党员教育</string>
    <string name="str_democratic_comment">民主评议</string>
    <string name="str_manage_rewards">党员奖惩</string>
    <string name="str_creation_fighting">创先争优</string>
    <string name="str_special_project">专项活动</string>
    <string name="str_change_term">换届选举</string>
    <string name="str_assistance_pauper">困难补助</string>
    <string name="str_pay_money"> 共计0元</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>