<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:background="@drawable/homepage_top_background" >

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/top_imageview_height"
            android:layout_height="@dimen/top_imageview_height"
            android:layout_marginLeft="@dimen/top_imageview_distance"
            android:layout_marginTop="@dimen/top_imageview_distance"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_height"
            android:layout_marginLeft="@dimen/top_height"
            android:layout_marginRight="@dimen/top_height"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/member_party_transform"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/member_party_transform_background"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/member_transform_height"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transform_name"
                        android:textColor="@color/member_transform_black"
                        android:textSize="@dimen/member_transform_size" />

                    <TextView
                        android:id="@+id/transform_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/transform_name"
                        android:textColor="@color/member_transform_grey"
                        android:textSize="@dimen/member_transform_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/member_transform_height"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transform_from_party_name"
                        android:textColor="@color/member_transform_black"
                        android:textSize="@dimen/member_transform_size" />

                    <TextView
                        android:id="@+id/transform_party_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/transform_party_name"
                        android:textColor="@color/member_transform_grey"
                        android:textSize="@dimen/member_transform_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/member_transform_height"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transform_from_party_address"
                        android:textColor="@color/member_transform_black"
                        android:textSize="@dimen/member_transform_size" />

                    <TextView
                        android:id="@+id/transform_party_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/transform_party_address"
                        android:textColor="@color/member_transform_grey"
                        android:textSize="@dimen/member_transform_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/member_transform_height"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transform_into_party_name"
                        android:textColor="@color/member_transform_black"
                        android:textSize="@dimen/member_transform_size" />

                    <TextView
                        android:id="@+id/transform_into_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/transform_time"
                        android:textColor="@color/member_transform_grey"
                        android:textSize="@dimen/member_transform_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/member_transform_height"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transform_into_party_address"
                        android:textColor="@color/member_transform_black"
                        android:textSize="@dimen/member_transform_size" />

                    <TextView
                        android:id="@+id/transform_into_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/transform_time"
                        android:textColor="@color/member_transform_grey"
                        android:textSize="@dimen/member_transform_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="50dp"
                android:src="@drawable/member_transform_left" />

            <Button
                android:id="@+id/btn_transform_confirm"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/member_transform_middle"
                android:text="@string/transform_confirm"
                android:textColor="@color/member_transform_yellow"
                android:textSize="@dimen/member_transform_size" />

            <Button
                android:id="@+id/btn_transform_cancel"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/member_transform_middle"
                android:text="@string/transform_cancel"
                android:textColor="@color/member_transform_yellow"
                android:textSize="@dimen/member_transform_size" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="50dp"
                android:src="@drawable/member_transform_right" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>