<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rel_viewpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp" >
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="#ffffff" >

            <RelativeLayout
                android:id="@+id/relative_recommned"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_homepage"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/homepage_normal" />

                    <TextView
                        android:id="@+id/text_homepage"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/str_homepage"
                        android:textColor="#82858b" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_public"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_public"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/public_normal" />

                    <TextView
                        android:id="@+id/text_public"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/str_public"
                        android:textColor="#82858b" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_party"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_party"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/party_normal" />

                    <TextView
                        android:id="@+id/text_party"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/str_party"
                        android:textColor="#82858b" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_member"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_member"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/member_normal" />

                    <TextView
                        android:id="@+id/text_member"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/str_member"
                        android:textColor="#82858b" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>